perf: 读取配置文件存储配置时忽略大小写。