@@ -4,22 +4,22 @@ import cn.hutool.core.convert.Convert;
 import cn.hutool.core.util.ClassUtil;
 import cn.hutool.log.Log;
 import cn.hutool.log.LogFactory;
+import org.apache.commons.collections4.map.CaseInsensitiveMap;
 import org.core.common.exception.BaseException;
 import org.core.common.result.ResultCode;
 import org.core.config.SaveConfig;
 import org.oss.service.OSSService;
 
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class OSSFactory {
     private static final Log log = LogFactory.get(OSSFactory.class);
     
     
-    private static final HashMap<String, OSSService> map = new HashMap<>();
+    private static final Map<String, OSSService> map = new CaseInsensitiveMap<>();
     
     private static final String PACKAGE_NAME = "org.oss.service.impl";
     
@@ -33,7 +33,7 @@ public class OSSFactory {
         for (Class<?> aClass : classes) {
             try {
                 List<Class<?>> interfaces = Arrays.asList(aClass.getInterfaces());
-                List<String> classNameList = interfaces.stream().map(Class::getName).collect(Collectors.toList());
+                List<String> classNameList = interfaces.stream().map(Class::getName).toList();
                 if (classNameList.contains(INTERFACE_NAME)) {
                     Object o = aClass.getDeclaredConstructor().newInstance();
                     OSSService convert = Convert.convert(OSSService.class, o);
